--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,8 @@
 server.port=9092
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/redditlike
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.jpa.show-sql=true
+server.error.include-stacktrace=ALWAYS
 
