--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,5 +5,5 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.show-sql=true
 server.error.include-stacktrace=ALWAYS
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
